[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "comfyui-hunyuanvideo-foley" # Unique identifier for your node. Immutable after creation.
description = "ComfyUI custom node for HunyuanVideo-Foley text-video-to-audio synthesis"
version = "1.0.0" # Custom Node version. Must be semantically versioned.
license = { file = "LICENSE.txt" }
dependencies  = [] # Filled in from requirements.txt

[project.urls]
Repository = "https://github.com/your-repo/ComfyUI_HunyuanVideoFoley"

[tool.comfy]
PublisherId = "impactframes" # TODO (fill in Publisher ID from Comfy Registry Website).
DisplayName = "HunyuanVideo-Foley" # Display name for the Custom Node. Can be changed later.
Icon = "https://example.com/icon.png" # SVG, PNG, JPG or GIF (MAX. 800x400px)
